# llacie

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.external-db.yml  docker-compose.pgpass.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: admission-100-labels.xlsx  admission-100.txt
llacie/: __init__.py  app.py  config.py  db.py  edw.py  evaluate.py  text_wrangling.py  utils.py  vocab.py
llacie/batch/: apptainer_slurm.py  bsub.py  kube_slurm.py  slurm.py
llacie/batch/sh/: apptainer_slurm.sh  kube_slurm.sh
llacie/cache/: abstract.py  sqlite.py
llacie/etc/: odbcinst.ini
llacie/grammars/: json_arr_of_strings.gbnf
llacie/inference/: llama_cpp.py  llama_cpp_python.py  vllm.py
llacie/scripts/: llacie.py
llacie/sql/: episodes.sql  schema.sql
llacie/strategies/: __init__.py  abstract.py  abstract_llama_cpp.py  abstract_vllm.py  abstract_vllm_or_lcp.py
llacie/strategies/episode_label/pres_sx_eplab1/: llama1.py
llacie/strategies/episode_label/pres_sx_eplab2/: __init__.py  llama31_8b.py  llama3_8b.py  llama3_8b_byterm.py
llacie/strategies/episode_label/pres_sx_eplab2_top30/: llama3_8b.py
llacie/strategies/feature/presenting_sx/: llama1.py  llama31_8b.py  llama3_8b.py  llama3_8b_byterm.py
llacie/strategies/section/hpi_short/: regex.py
llacie/tasks/: __init__.py  abstract.py  episode_label.py  feature.py  section.py
llacie/vocabs/: dt.pres_sx.ngrams.v1.xlsx  dt.pres_sx.ngrams.v2.xlsx
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_quickstart.py
tests/unit/: __init__.py
