[project]
name = "llacie"
version = "1.0.3"
requires-python = ">= 3.11"
authors = [{ name = "Theodore Pak", email = "theodore.r.pak@gmail.com" }]
description = "An LLM-based clinical information extraction toolkit."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "click",
    "python-dotenv",
    "sqlalchemy",
    "psycopg2",
    "pandas",
    "openpyxl",
    "platformdirs",
    "tqdm",
    "sentencepiece",
    "protobuf",
    "transformers",
    "scikit-learn",
    "jinja2",
    "tabulate",
    "confidenceinterval",
    "llama-cpp-python==0.3.2"
]
keywords = [
    "natural language processing", 
    "large language model", 
    "clinical informatics"
]
classifiers=[
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
edw = ["pyodbc"]
dev = ["flit"]
test = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-timeout>=2.1", "pytest-dependency>=0.5.1"]

[project.scripts]
llacie = "llacie.scripts.llacie:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "llacie"

[tool.flit.sdist]
exclude = [
    "llacie/vocabs/.cache",
    "**/.DS_Store",
    "**/~$*",
    "Dockerfile",
    "docker-compose.yml",
    "docker-compose.*.yml",
    ".dockerignore"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E501",  # line too long (handled by line-length)
    "E701"   # multiple statements on one line
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
# Ignore import rules in __init__.py files
"__init__.py" = ["F401"]
# Ignore all rules in test files except errors
"tests/**/*.py" = ["N", "UP"]